# playlist_generator

./: .gitignore  CMakeLists.txt
cmake/: DefaultOptions.cmake  DownloadCxxopts.cmake  InitHunter.cmake
hunter_repo/: .gitignore
resource/: embed_mime_types.cpp
src/: debug.h  file_system.cpp  file_system.h  main.cpp  resources.h  xattr_extractor.cpp  xattr_extractor.h
